--- a/templates/board.html
+++ b/templates/board.html
@@ -37,7 +37,7 @@
             <div class="modal-dialog" data-bs-theme="dark">
                 <div class="modal-content chan-thread-modal">
                     <div class="modal-header" style="border-color: #5e5e5e;">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">New Thread data:</h1>
+                    <h1 class="modal-title bg-body-secondary border border-1 border-dark fs-5 px-1 font-monospace" id="exampleModalLabel">New Thread data:</h1>
                     <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -73,7 +73,7 @@
             <div class="modal-dialog" data-bs-theme="dark">
                 <div class="modal-content chan-thread-modal">
                     <div class="modal-header" style="border-color: #5e5e5e;">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">New Reply data:</h1>
+                    <h1 class="modal-title bg-body-secondary border border-1 border-dark fs-5 px-1 font-monospace" id="exampleModalLabel">New Reply data:</h1>
                     <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
