--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,8 +11,6 @@
     
 }
 
-
-
 .chan-nav{
     height: 40px;
     background-color: rgb(39 39 42);
@@ -75,4 +73,21 @@
     border-radius: 3px;
     background-color: rgb(24 24 27);
     color: white;
+}
+
+.custom-table {
+    color: #ddd; /* Light gray text */
+    border-color: #555; /* Border color */
+}
+
+.custom-table th{
+    padding: 0.75rem 0;
+}
+
+.custom-table td{
+    padding: 0.1rem 0;
+}
+
+.custom-table th, .custom-table td {
+    border-bottom:  1px solid rgba(255, 255, 255, 0);
 }
